<resources>
    <string name="app_name">JVC Browser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Actualiser</string>
    <string name="jvchat">JVChat</string>
    <string name="autorefresh_on">Activer l\'autorefresh</string>
    <string name="autorefresh_off">Desactiver l\'autorefresh</string>
    <string name="last_page">Derniere page</string>
    <string name="goto_page">Aller a la page</string>
    <string name="add_favorite">Ajouter aux favoris</string>
    <string name="add_subscribe">S\'abonner</string>
    <string name="smileys">Smileys</string>
    <string name="toolbar">Toolbar</string>
    <string name="noelshack">Noelshack</string>
    <string name="favorite_added">Ajouté aux favoris</string>
    <string name="subscribe_added">Ajouté aux abonnements</string>
    <string name="favorite_deleted">Supprimé des favoris</string>
    <string name="subscribe_deleted">Supprimé des abonnements</string>
    <string name="search">Recherche</string>
    <string name="could_not_swipe">Pas d\'anciens posts</string>
    <string name="new_mp">Nouveau MP</string>
    <string name="mp_lock">Fermer</string>
    <string name="next">Suivant</string>
    <string name="prev">Précédent</string>
    <string name="clear">Vider</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="page_number">Numéro de la page</string>
    <string name="field_empty">Champs vide</string>
    <string name="go_to_page_over_9000">It\'s over 9000</string>
    <string name="write">écrit</string>
    <string name="no_banned">Pas d\'indésirables</string>
    <string name="no_history">Pas d\'historique</string>
    <string name="no_result">Pas de résultats</string>
    <string name="no_subscribes">Pas d\'abonnements</string>
    <string name="no_notifications">Pas de notifications</string>
    <string name="forum_search">Chercher un forum</string>
    <string name="post">Poster</string>
    <string name="message">Message</string>
    <string name="captcha">captcha</string>
    <string name="thumb">thumb</string>
    <string name="fap">+</string>
    <string name="mp_dests">Destinataires</string>
    <string name="subject">Sujet</string>
    <string name="dummy">loooooooooooooool</string>
    <string name="double_tap">Tap encore pour quitter l\'app</string>
</resources>
